--- a/src/main/resources/templates/sample/logintest.html
+++ b/src/main/resources/templates/sample/logintest.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-    로그인 없이 이 페이지 들어올 수 있으면 성공
+    로그인 없이 이 페이지 들어올 수 있으면 성공<br>
+    최영호
 </body>
 </html>
