사람들 보기 쉽게 베이직 에이치티엠엘 수정
<!--★★★★★★★★★★카드내용★★★★★★★★★★★★-->
여기에 카드랑 내용 넣어주시면 됩니다

--- a/src/main/resources/templates/layout/basic.html
+++ b/src/main/resources/templates/layout/basic.html
@@ -24,9 +24,8 @@
 
         <section class="section dashboard">
             <div class="row">
-
-
-
+                <!--★★★★★★★★★★카드내용★★★★★★★★★★★★-->
+                <!--여기에 카드랑 내용 넣어주시면 됩니다-->
 
             </div>
         </section>
