--- a/src/main/resources/templates/purchaseorder/orderget.html
+++ b/src/main/resources/templates/purchaseorder/orderget.html
@@ -109,61 +109,64 @@
                     </div>
                 </div>
                 <div class="col-lg-12">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">거래내용</h5>
-                            <div class="row mb-3">
-                                <label for="inputText" class="col-sm-2 col-form-label">발주일자</label>
-                                <div class="col-sm-10">
-                                    <input type="date" class="form-control" value="2024-07-18">
+                    <form action="orderinsert" method="post">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">거래내용</h5>
+                                <div class="row mb-3">
+                                    <label for="inputText" class="col-sm-2 col-form-label">발주일자</label>
+                                    <div class="col-sm-10">
+                                        <input type="date" class="form-control" value="2024-07-18">
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="row mb-3">
-                                <label for="inputText" class="col-sm-2 col-form-label">납기일자</label>
-                                <div class="col-sm-10">
-                                    <input type="date" class="form-control" value="2024-08-05">
+                                <div class="row mb-3">
+                                    <label for="inputText" class="col-sm-2 col-form-label">납기일자</label>
+                                    <div class="col-sm-10">
+                                        <input type="date" class="form-control" value="2024-08-05">
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="row mb-3">
-                                <label for="inputText" class="col-sm-2 col-form-label">납품장소</label>
-                                <div class="col-sm-10">
-                                    <input type="text" class="form-control" value="경기도 수원시 어쩌구 저쩌구 1층 창고">
+                                <div class="row mb-3">
+                                    <label for="inputText" class="col-sm-2 col-form-label">납품장소</label>
+                                    <div class="col-sm-10">
+                                        <input type="text" class="form-control" value="경기도 수원시 어쩌구 저쩌구 1층 창고">
+                                    </div>
                                 </div>
-                            </div>
 
-                            <div class="row mb-3">
-                                <label for="inputText" class="col-sm-2 col-form-label">품목명</label>
-                                <div class="col-sm-10">
-                                    <input type="text" class="form-control" value="펜대" disabled>
+                                <div class="row mb-3">
+                                    <label for="inputText" class="col-sm-2 col-form-label">품목명</label>
+                                    <div class="col-sm-10">
+                                        <input type="text" class="form-control" value="펜대" disabled>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="row mb-3">
-                                <label for="inputText" class="col-sm-2 col-form-label">규격</label>
-                                <div class="col-sm-10">
-                                    <input type="text" class="form-control" value="황동/8cm" disabled>
+                                <div class="row mb-3">
+                                    <label for="inputText" class="col-sm-2 col-form-label">규격</label>
+                                    <div class="col-sm-10">
+                                        <input type="text" class="form-control" value="황동/8cm" disabled>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="row mb-3">
-                                <label for="inputText" class="col-sm-2 col-form-label">수량</label>
-                                <div class="col-sm-10">
-                                    <input type="text" class="form-control" value="50">
+                                <div class="row mb-3">
+                                    <label for="inputText" class="col-sm-2 col-form-label">수량</label>
+                                    <div class="col-sm-10">
+                                        <input type="text" class="form-control" value="50">
+                                    </div>
                                 </div>
-                            </div>
 
-                            <div class="row mb-3">
-                                <label for="inputPassword" class="col-sm-2 col-form-label">비고</label>
-                                <div class="col-sm-10">
-                    <textarea class="form-control"
-                              style="height: 100px">문의사항 발생시 언제든 연락부탁드립니다. 납기 전 담당자에게 연락 부타드립니다.</textarea>
+                                <div class="row mb-3">
+                                    <label for="inputText" class="col-sm-2 col-form-label">비고</label>
+                                    <div class="col-sm-10">
+                                        <textarea class="form-control"style="height: 100px">
+                                            문의사항 발생시 언제든 연락부탁드립니다. 납기 전 담당자에게 연락 부타드립니다.
+                                        </textarea>
+                                    </div>
                                 </div>
-                            </div>
-                            <div id="content">
-                                <button type="button" class="btn btn-primary" id="addHtmlBtn">검수계획추가</button>
-                                <button type="button" class="btn btn-primary">발주처리 및 다운로드</button>
-                                <button type="button" class="btn btn-primary">리스트</button>
+                                <div id="content">
+                                    <button type="button" class="btn btn-primary" id="addHtmlBtn">검수계획추가</button>
+                                    <button type="button" class="btn btn-primary">발주처리 및 다운로드</button>
+                                    <button type="button" class="btn btn-primary">리스트</button>
+                                </div>
                             </div>
                         </div>
-                    </div>
+                    </form>
                 </div>
 
 
@@ -174,5 +177,9 @@
     <!-- End #main -->
     <th:block th:replace="~{/fragments/bodyFragment::footer}"></th:block>
     <th:block th:replace="~{/fragments/bodyFragment::js}"></th:block>
+    <!--내용 ajax처리를 위한 스크립트-->
+    <script>
+
+    </script>
 </body>
 </html>
