발주서 작업중 1
발주서
수정: 발주리스트(링크수정), 발주상세보기(api 밑작업)

--- a/src/main/resources/templates/purchaseorder/orderget.html
+++ b/src/main/resources/templates/purchaseorder/orderget.html
@@ -179,7 +179,16 @@
     <th:block th:replace="~{/fragments/bodyFragment::js}"></th:block>
     <!--내용 ajax처리를 위한 스크립트-->
     <script>
+        $(document).ready(function (e){
 
+            var purchaseOrderCode = [[${purchaseOrderCode}]];
+
+
+            function getPurchaseOrderContent(){
+                $.getJSON("/purchaseordercontent/"+purchaseOrderCode)
+                    console.log()
+            }
+        })
     </script>
 </body>
 </html>
