--- a/src/main/resources/templates/purchaseorder/orderlist.html
+++ b/src/main/resources/templates/purchaseorder/orderlist.html
@@ -29,7 +29,7 @@
                 <div class="col-lg-12">
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title">발주리스트</h5>
+                            <h5 class="card-title">발주리스트 하는중</h5>
                             <div class="accordion" id="accordionExample">
                                 <div class="accordion-item">
                                     <h2 class="accordion-header" id="headingOne">
@@ -124,7 +124,7 @@
                                 <tr>
                                     <th scope="row">1</th>
                                     <td>미발주</td>
-                                    <td><a href="orderread">펜대</a></td>
+                                    <td><a href="orderget?purchaseOrderCode=PO2">펜대</a></td>
                                     <td>50</td>
                                     <td>3000</td>
                                     <td>A상사</td>
