깃허브 계정 오류로 테스트 3
확인중

--- a/src/main/resources/templates/sample/logintest.html
+++ b/src/main/resources/templates/sample/logintest.html
@@ -10,6 +10,7 @@
     박승희<br>
     최미선<br>
     최미선 깃허브 아이디 연동테스트1<br>
-    최미선 깃허브 아이디 연동테스트2
+    최미선 깃허브 아이디 연동테스트2<br>
+    최미선 깃허브 아이디 연동테스트3
 </body>
 </html>
