깃허브 계정 오류로 테스트 4
확인중

--- a/src/main/resources/templates/sample/logintest.html
+++ b/src/main/resources/templates/sample/logintest.html
@@ -11,6 +11,7 @@
     최미선<br>
     최미선 깃허브 아이디 연동테스트1<br>
     최미선 깃허브 아이디 연동테스트2<br>
-    최미선 깃허브 아이디 연동테스트3
+    최미선 깃허브 아이디 연동테스트3<br>
+    최미선 깃허브 아이디 연동테스트4<br>
 </body>
 </html>
