--- a/src/main/resources/templates/fragments/bodyFragment.html
+++ b/src/main/resources/templates/fragments/bodyFragment.html
@@ -5,9 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-    <div th:fragment="header">
+    <div >
         <!-- ======= Header ======= -->
-        <header id="header" class="header fixed-top d-flex align-items-center">
+        <header th:fragment="header" id="header" class="header fixed-top d-flex align-items-center">
             <!-- Start Logo -->
             <div class="d-flex align-items-center justify-content-between">
                 <a href="메인대쉬보드.html" class="logo d-flex align-items-center">
@@ -83,9 +83,9 @@
         </header><!-- End Header -->
     </div><!-- End fragment="header"-->
 
-    <div th:fragment="sidebar">
+    <div >
         <!-- ======= Sidebar ======= -->
-        <aside id="sidebar" class="sidebar">
+        <aside th:fragment="sidebar" id="sidebar" class="sidebar">
             <ul class="sidebar-nav" id="sidebar-nav">
                 <li class="nav-item">
                     <a class="nav-link collapsed" href="메인대쉬보드.html">
@@ -222,9 +222,9 @@
         </aside><!-- End Sidebar-->
     </div><!-- End fragment="sidebar"-->
 
-    <div th:fragment="footer">
+    <div >
         <!-- ======= Footer ======= -->
-        <footer id="footer" class="footer">
+        <footer th:fragment="footer" id="footer" class="footer">
             <div class="copyright">
                 &copy; Copyright <strong><span>NiceAdmin</span></strong>. All Rights Reserved
             </div>
