--- a/src/main/resources/templates/warehousing/releaseread.html
+++ b/src/main/resources/templates/warehousing/releaseread.html
@@ -1,5 +1,7 @@
+
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -277,7 +279,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="자사정보.html">
+                    <a href=자사정보.html">
                         <i class="bi bi-circle"></i><span>회사</span>
                     </a>
                 </li>
@@ -309,12 +311,12 @@
 <main id="main" class="main">
 
     <div class="pagetitle">
-        <h1>입고내역상세보기</h1>
+        <h1>출고내역상세보기</h1>
         <nav>
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="main.html">메인</a></li>
+                <li class="breadcrumb-item"><a href="메인대쉬보드.html">메인</a></li>
                 <li class="breadcrumb-item">재고관리</li>
-                <li class="breadcrumb-item active">입출고내역</li>
+                <li class="breadcrumb-item">입출고내역</li>
             </ol>
         </nav>
     </div><!-- End Page Title -->
@@ -322,117 +324,84 @@
     <section class="section">
         <div class="row">
             <div class="col-lg-12">
+
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">
-                            거래내용
-                            <button type="button" class="btn btn-primary btn-sm">발주서보기</button>
-                            <button type="button" class="btn btn-primary btn-sm">거래계약서보기</button>
-                        </h5>
-                        <!-- General Form Elements -->
-                        <table class="table table-bordered">
-                            <tr>
-                                <td>거래처명</td>
-                                <td>A상사</td>
-                            </tr>
-                            <tr>
-                                <td>발주일자</td>
-                                <td>2024-07-18</td>
-                            </tr>
-                        </table>
-                        <table class="table table-bordered">
-                            <thead>
-                            <tr>
-                                <th>No.</th>
-                                <th>품목명</th>
-                                <th>규격</th>
-                                <th>수량</th>
-                                <th>가격</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <tr>
-                                <td>1</td>
-                                <td>펜대</td>
-                                <td>황동/8cm</td>
-                                <td>50개</td>
-                                <td>60원</td>
-                            </tr>
-                            </tbody>
-                            <tfoot>
-                            <tr>
-                                <td colspan="3">합계</td>
-                                <td>50개</td>
-                                <td>3000원</td>
-                            </tr>
-                            </tfoot>
-                        </table>
+                        <h5 class="card-title">출고요청내용</h5>
+                        <div class="row mb-3">
+                            <label class="col-sm-2 col-form-label">품목명</label>
+                            <div class="col-sm-10">
+                                <input type="type" class="form-control" value="펜촉" disabled>
+                            </div>
+                        </div>
 
+                        <div class="row mb-3">
+                            <label class="col-sm-2 col-form-label">공급처</label>
+                            <div class="col-sm-10">
+                                <input type="type" class="form-control" value="A상사" disabled>
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <label class="col-sm-2 col-form-label">요청처</label>
+                            <div class="col-sm-10">
+                                <input type="type" class="form-control" value="생산1팀" disabled>
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <label class="col-sm-2 col-form-label">게획수립일</label>
+                            <div class="col-sm-10">
+                                <input type="date" class="form-control" value="2024-05-30" disabled>
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <label class="col-sm-2 col-form-label">계획수량</label>
+                            <div class="col-sm-10">
+                                <input type="type" class="form-control" value="100" disabled>
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <label class="col-sm-2 col-form-label">불출희망일</label>
+                            <div class="col-sm-10">
+                                <input type="date" class="form-control" value="2024-06-20" disabled>
+                            </div>
+                        </div>
 
                     </div>
                 </div>
+
             </div>
             <div class="col-lg-12">
+
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">
-                            입고/반품내역
-                            <a href="거래명세서샘플.html"><button type="button" class="btn btn-primary btn-sm">입고(정품) 및 거래명세서발행</button></a>
-                        </h5>
+                        <h5 class="card-title">출고내역</h5>
+                        <div class="row mb-3">
+                            <label class="col-sm-2 col-form-label">불출일</label>
+                            <div class="col-sm-10">
+                                <input type="date" class="form-control" value="2024-06-10" disabled>
+                            </div>
+                        </div>
 
-                        <table class="table table-bordered">
-                            <thead>
-                            <tr>
-                                <th>날짜</th>
-                                <th>정품/반품</th>
-                                <th>입고수량</th>
-                                <th>출하명세서</th>
-                                <th>거래명세서</th>
-                                <th>검수결과비고</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <tr>
-                                <td>7/19</td>
-                                <td>정품</td>
-                                <td>50</td>
-                                <td><button type="button" class="btn btn-primary btn-sm">파일보기</button></td>
-                                <td><button type="button" class="btn btn-primary btn-sm">파일보기</button></td>
-                                <!--<script type="text/javascript">-->
-                                <!--    function openPop(){-->
-                                <!--      var popup = window.open('http://www.naver.com', '네이버팝업', 'width=700px,height=800px,scrollbars=yes');-->
-                                <!--    }-->
-                                <!--</script>-->
-                                <!--<body>-->
-                                <!--<a href="#none" target="_blank" onclick="openPop()" style="font-size:4rem;">팝업 클릭</a>-->
-                                <!--</body>-->
-
-                                <td>이상없음</td>
-                            </tr>
-                            <tr>
-                                <td>7/17</td>
-                                <td>반품</td>
-                                <td>(50)</td>
-                                <td><button type="button" class="btn btn-primary btn-sm">파일보기</button></td>
-                                <td><button type="button" class="btn btn-primary btn-sm">파일보기</button></td>
-                                <td>거래처측 제품 오출고로 반품</td>
-                            </tr>
-                            </tbody>
-                            <tfoot>
-                            <tr>
-                                <td colspan="3">미입고수량</td>
-                                <td colspan="3">0</td>
-
-                            </tr>
-                            </tfoot>
-                        </table>
+                        <div class="row mb-3">
+                            <label class="col-sm-2 col-form-label">출고수량</label>
+                            <div class="col-sm-10">
+                                <input type="number" class="form-control" value="100" disabled>
+                            </div>
+                        </div>
 
 
+                        <div class="row mb-3">
+                            <label class="col-sm-2 col-form-label">비고</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" value="모두출고" disabled>
+                            </div>
+                        </div>
+                        <a href="#" ><button type="button" class="btn btn-primary">수정</button></a>
+                        <a href="출고요청리스트.html" ><button type="button" class="btn btn-primary">리스트</button></a>
                     </div>
                 </div>
+
             </div>
-
-
         </div>
     </section>
 
@@ -470,7 +439,5 @@
 <script src="../assets/js/main.js"></script>
 
 </body>
-
-
 
 </html>
