공지사항 작업중 3
생성(미완) : 공지사항,부서알림 dto, 부서알림 상세보기 html 파일, 부서알림 수정 html 파일

--- a/src/main/resources/templates/Notice/noticelist.html
+++ b/src/main/resources/templates/Notice/noticelist.html
@@ -46,9 +46,6 @@
                         &nbsp
                         <button type="button" class="btn btn-primary btn-sm">글쓰기</button>
                         &nbsp
-                        <button type="button" class="btn btn-primary btn-sm">수정</button>
-                        &nbsp
-                        <button type="button" class="btn btn-primary btn-sm">삭제</button>
 
                         <!-- Table with hoverable rows -->
                         <table class="table table-hover">
@@ -63,7 +60,7 @@
                             <tbody>
                             <tr>
                                 <th scope="row">1</th>
-                                <td><a href="공지사항더미.html"></a>관리자</td>
+                                <td>관리자</td>
                                 <td><a href="noticeread">※ 여름휴가공지 ※<br></a></td>
                                 <td>2024-07-22</td>
                             </tr>
@@ -112,9 +109,6 @@
 
                         <button type="button" class="btn btn-primary btn-sm">글쓰기</button>
                         &nbsp
-                        <button type="button" class="btn btn-primary btn-sm">수정</button>
-                        &nbsp
-                        <button type="button" class="btn btn-primary btn-sm">삭제</button>
 
                         <!-- Table with hoverable rows -->
                         <table class="table table-hover">
@@ -130,7 +124,7 @@
                             <tr>
                                 <th scope="row">1</th>
                                 <td>생산부서 김길동</td>
-                                <td> <a href="공지사항2.html">생산부서 생산 요청 완료<br></td>
+                                <td><a href="/deptnotice/deptnoticeread">생산부서 생산 요청 완료<br></td>
                                 <td>2024-07-20</td>
                             </tr>
                             <tr>
