--- a/src/main/resources/templates/Notice/noticemodify.html
+++ b/src/main/resources/templates/Notice/noticemodify.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>전제공지상세보기</title>
+    <title>Title</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -16,12 +16,13 @@
 <!-- ======= main ======= -->
 <main id="main" class="main">
     <div class="pagetitle">
-        <h1>전체 공지사항</h1>
+        <h1>페이지제목</h1>
         <nav>
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="index.html">메인</a></li>
-                <li class="breadcrumb-item">공지사항</li>
-                <li class="breadcrumb-item">※ 여름휴가공지 ※</li>
+                <li class="breadcrumb-item">경로1</li>
+                <li class="breadcrumb-item">경로2</li>
+                <li class="breadcrumb-item active">페이지제목</li>
             </ol>
         </nav>
     </div><!-- End Page Title -->
@@ -66,23 +67,25 @@
                                 </div>
 
 
+                                <div class="row mb-3">
+                                    <label class="col-sm-2 col-form-label">본문 내용</label>
+                                    <!-- End Quill Editor Full -->
 
-                                <!-- End Quill Editor Full -->
-
+                                </div>
                     </div>
+
                 </div>
 
-            </div>
+                <div class="col-lg-12">
 
-            <div class="col-lg-12">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">TinyMCE Editor</h5>
 
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">본문내용</h5>
-
-
-                        <p>SUMMER VACATION</p>
-                        <pre>              &nbsp; &nbsp;   여름 휴가 공지
+                            <!-- TinyMCE Editor -->
+                            <textarea class="tinymce-editor">
+                <p>SUMMER VACATION</p>
+                <p> 여름 휴가 공지
 
                     (주) 정감을 아껴주시고 찾아주시는 고객님들께 알려드립니다.
 
@@ -90,28 +93,27 @@
 
                     무더운 여름을 맞아 아래와 같은 일정으로 하계휴가를 실시합니다.
 
-                    재충전후 더 좋은 모습으로 찾아뵙겠습니다.</pre>
+                    재충전후 더 좋은 모습으로 찾아뵙겠습니다.</p>
+              </textarea><!-- End TinyMCE Editor -->
 
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="row mb-12">
+                    <div class="col-sm-10">
+                        <a href="공지사항1더미.html"><button type="button" class="btn btn-primary">완료</button></a>
+                        <a href="">  <button type="button" class="btn btn-danger">삭제</button></a>
+                        <a href="공지사항.html"><button type="button" class="btn btn-primary">조회</button></a>
                     </div>
                 </div>
+                </form><!-- End General Form Elements -->
 
             </div>
-
-            <div class="row mb-12">
-                <div class="col-sm-10">
-                    <a href=noticemodify.html"><button type="button" class="btn btn-primary">수정</button></a>
-                    <a href="">  <button type="button" class="btn btn-danger">삭제</button></a>
-                    <a href="공지사항.html"><button type="button" class="btn btn-primary">조회</button></a>
-                </div>
-            </div>
-            </form><!-- End General Form Elements -->
-
-        </div>
         </div>
 
         </div>
-
-
         </div> <!--End row-->
     </section>
 </main>
