공지사항 작업중 4
생성(미완) : 회원 dto, 회원,공지사항 더미데이터 생성 (레포지토리 테스트)

--- a/src/main/resources/templates/Notice/noticelist.html
+++ b/src/main/resources/templates/Notice/noticelist.html
@@ -61,7 +61,7 @@
                             <tr>
                                 <th scope="row">1</th>
                                 <td>관리자</td>
-                                <td><a href="noticeread">※ 여름휴가공지 ※<br></a></td>
+                                <td><a href="/notice/noticeread">※ 여름휴가공지 ※</a></td>
                                 <td>2024-07-22</td>
                             </tr>
                             <tr>
